# ElementEmbeddings

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  LICENSE.md  README.md  _setup_.cfgtxt_n  contributing.md  element_stuff.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyproject.toml_poetry  pyproject.toml_setuptools  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml  versions.json
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  combine-prs.yml  latest_docs.yml  python-publish.yml  stable_docs.yml
0.0/: 404.html  index.html  objects.inv  sitemap.xml
0.0.3/: 404.html  index.html  sitemap.xml
0.0.3/about/: index.html
0.0.3/contribution/: index.html
0.0.3/installation/: index.html
0.0.3/python_api/: index.html
0.0.3/reference/: index.html
0.0.3/tutorials/: index.html
0.0/python_api/: index.html
0.0/reference/: index.html
0.0/search/: search_index.json
0.0/tutorials/: index.html
0.2_test/: 404.html  index.html  objects.inv  sitemap.xml
0.2_test/about/: index.html
0.2_test/contribution/: index.html
0.2_test/installation/: index.html
0.2_test/python_api/composition/: index.html
0.2_test/python_api/core/: index.html
0.2_test/python_api/plotter/: index.html
0.2_test/python_api/python_api/: index.html
0.2_test/reference/: index.html
0.2_test/search/: search_index.json
0.2_test/tutorials/: index.html
0.3/: 404.html  index.html  sitemap.xml
0.3.1/: 404.html  index.html  objects.inv  sitemap.xml
0.3.1/about/: index.html
0.3.1/contribution/: index.html
0.3.1/installation/: index.html
0.3.1/python_api/composition/: index.html
0.3.1/python_api/core/: index.html
0.3.1/python_api/plotter/: index.html
0.3.1/python_api/python_api/: index.html
0.3.1/reference/: index.html
0.3.1/search/: search_index.json
0.3.1/tutorials/: index.html
0.3/about/: index.html
0.3/contribution/: index.html
0.3/installation/: index.html
0.3/python_api/composition/: index.html
0.3/python_api/core/: index.html
0.3/python_api/plotter/: index.html
0.3/python_api/python_api/: index.html
0.3/reference/: index.html
0.3/tutorials/: index.html
0.4/: 404.html  index.html  sitemap.xml
0.4/about/: index.html
0.4/contribution/: index.html
0.4/installation/: index.html
0.4/python_api/core/: index.html
0.4/reference/: index.html
0.4/search/: search_index.json
0.4/tutorials/: index.html
AtomicEmbeddings/: AtomicEmbeddings.py  __init__.py  composition.py  core.py  plotter.py
AtomicEmbeddings.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
AtomicEmbeddings/data/: README.md  magpie.json  magpie_sc.json  random_200.json
AtomicEmbeddings/tests/: __init__.py  test.py  test_composition.py  test_core.py  test_embeddings.py  test_plotter.py  test_utils.py
AtomicEmbeddings/utils/: io.py
Publication/: README.md  element_similarity.ipynb  metrics_plots.ipynb  pca.ipynb  presentation.ipynb
Publication/SI/: element_similairty_SI.ipynb
Publication/element_similarity/: README.md  requirements_publication.txt
about/: index.html
contribution/: index.html
data/: README.md  mat2vec.json  megnet16.json  mod_petti.json  oliynyk.json
dev_docs/design_docs/: Restructuring.md
dev_docs/dev_notebooks/: composition_statistics.ipynb
develop/: 404.html  index.html  objects.inv  sitemap.xml
develop/about/: index.html
develop/contribution/: index.html
develop/installation/: index.html
develop/search/: search_index.json
develop/tutorials/: index.html
docs/: about.md  contribution.md  index.md  installation.md  python_api.md  reference.md  tutorials.md
docs/.overrides/: main.html
docs/embeddings/: element.md  embeddings.md  species.md
docs/python_api/: composition.md  core.md  plotter.md  python_api.md
docs/tutorial/: composition.ipynb  species.ipynb  usage.ipynb
elementembeddings/tests/: test_composition.py  test_core.py
elementembeddings/utils/: math.py
examples/: 3d_embedding_composite.py  3d_embedding_maps.py  README.md  composition.ipynb  composition_distance.py  generate_cosine_heatmaps.py  species.ipynb  usage.ipynb
examples/comparisons/: compare_embeddings.py  mantel_test_results.csv  pairwise_comparison.csv
installation/: index.html
latest/: 404.html  index.html
latest/about/: index.html
latest/contribution/: index.html
latest/installation/: index.html
latest/python_api/: index.html
latest/reference/: index.html
latest/tutorials/: index.html
main/: 404.html  index.html  objects.inv  sitemap.xml
main/about/: index.html
main/contribution/: index.html
main/installation/: index.html  installation.md
main/search/: search_index.json
main/tutorials/: index.html
python_api/: index.html
python_api/composition/: index.html
python_api/core/: index.html
python_api/plotter/: index.html
python_api/python_api/: index.html
reference/: index.html
scripts/: extract_mace_embeddings.py  extract_matscibert.py  extract_mlip_element_embeddings.py  extract_sevennet_orb.py
search/: search_index.json
src/elementembeddings/: __init__.py  _base.py  compare.py  composition.py  core.py  plotter.py
tutorials/: index.html
v0.6/: 404.html  index.html  index.md  sitemap.xml
v0.6.1/: 404.html  index.html  sitemap.xml
v0.6.1/about/: about.md  index.html
v0.6.1/contribution/: index.html
v0.6.1/installation/: index.html
v0.6.1/search/: search_index.json
v0.6.1/tutorials/: index.html
v0.6/about/: about.md  index.html
v0.6/contribution/: index.html
v0.6/installation/: index.html
v0.6/search/: search_index.json
v0.6/tutorials/: index.html  tutorials.md
v0.7.1/: 404.html  index.html  sitemap.xml
v0.7.1/about/: index.html
v0.7.1/contribution/: index.html
v0.7.1/installation/: index.html
v0.7.1/search/: search_index.json
v0.7.1/tutorials/: index.html
v0.7.2/: 404.html  index.html  objects.inv  sitemap.xml
v0.7.2/about/: index.html
v0.7.2/contribution/: index.html
v0.7.2/installation/: index.html
v0.7.2/search/: search_index.json
v0.7.2/tutorials/: index.html
(+170 files in other folders)
